# dev-tools

./: README.md  package.json
.github/workflows/: publish.yml
config/: webpack.config.js
docs/: 01 Init Project.md
src/: App.js  index.js  index.less  setupProxy.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  watcher.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/api/: index.js  users.js
src/assets/stylesheets/: application.scss  globalInjectedData.scss
src/assets/stylesheets/application/: _layout.scss  _reset.scss  _table.scss
src/components/contexts/: AppContext.js
src/components/enhance/: withModal.js
src/routes/: index.js
src/store/: index.js
src/store/reducers/: clipboardHistory.js  index.js  reverseProxy.js  script.js  user.js
src/tauri/: index.js
src/utils/apiAxios/: index.js  supportMetaCancelToken.js
src/utils/events/: longpress.js
src/utils/libs/: Clipboard.js  compressImage.js  constData.js  date.js  generateExcel.js  isMobile.js  moment.js  withDragScroll.js
src/utils/native/: Date.js  FormData.js
src/views/404/: index.js
src/views/clipboardHistories/: Form.js  index.js  index.scss
src/views/home/: index.js
src/views/login/: index.js
src/views/reverseProxy/: Form.js  index.js  index.scss
src/views/scripts/: Form.js  index.js  index.scss
src/views/settings/: index.js  index.scss
src/views/shortcutClipboardHistories/: index.js  index.scss
(+11 files in other folders)
