[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
arboard = "2.0.1"
clipboard-master = "3.1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["api-all", "system-tray"] }
# proxy
axum = { version = "0.4.8", features = ["headers"] }
tower-http = { version = "0.2.0", features = ["cors"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
# serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
# tokio = { version = "1.17.0", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
